@@ -14,6 +14,7 @@ Fixes and Minor Enhancements:
 * Folder Contents dialog: fixed adding the sizes of files without read permissions.
 * Fixed crash when opening a database while another parsing is ongoing.
 * Improved parsing of items that were marked unreadable during database creation.
+* Menu action "Open Branch": added finding renamed branch files.
 
 Internal changes:
 * Redesigned task management system.
